--- a/src/data/levels/001_Assembly language/007_Addressing modes (3-3)/chat/en.yml
+++ b/src/data/levels/001_Assembly language/007_Addressing modes (3-3)/chat/en.yml
@@ -1,129 +1,127 @@
 ---
 main:
   run: |
-    if (m.$end) $.goTo("exercise");
-    else {
-      set((m) => {
-        m.chat.stopBlock = locales.get("not_now");
-        m.$canRun = false;
-        m.$canEdit = false;
-      });
-      bus.emit("memory-view", 0x0);
-    }
-  messages: []
-  events:
-  - compiled [lda]
-
-lda:
-  run: |
-    bus.emit("step");
-  run-after-messages: |
-    set((m) => m.$canRun = true);
-  messages:
-  - this is where addressing gets interesting 🧐
-  - in "Zero Page,X" addressing, a zero page address is given
-  - and then the value of [X] is added
-  - run the first two instructions ⏩
-  events:
-  - step [zero1]
-
-zero1:
-  messages: []
-  events:
-  - step [zero2]
-
-zero2:
-  run: |
-    set((m) => m.$canRun = false);
-  run-after-messages: |
-    set((m) => m.$canRun = true);
-  messages:
-  - this ended up writing $CD (the content of [A]) to $0062
-  - which is the result of $60 + [X]
-  - note that I hacked your Memory Viewer to show the zero page
-  - you can check it out yourself 👀
-  - run the next two instructions ⏩
-  events:
-  - step [zero3]
-
-zero3:
-  messages: []
-  events:
-  - step [zero4]
-
-zero4:
-  run: |
-    set((m) => m.$canRun = false);
-  messages:
-  - see? the <same> instruction (`STA $60,X`) had a <different> result 🤯
-  - since [X] is now 3, it wrote to $0063
-  responses:
-  - what happens if the result of the addition is larger than a byte? [wrap]
-
-wrap:
-  run-after-messages: |
-    set((m) => m.$canRun = true);
-  messages:
-  - the address just wraps around 🎁
-  - let me show you
-  - run two more instructions ⏩
-  events:
-  - step [wrap1]
-
-wrap1:
-  messages: []
-  events:
-  - step [wrap2]
-
-wrap2:
-  run: |
-    set((m) => m.$canRun = false);
-  run-after-messages: |
-    set((m) => m.$canRun = true);
-    bus.emit("memory-view", 0x4020);
-  messages:
-  - as you saw, it wrote $CD to $05
-  - the next addressing mode is called "Absolute,X"
-  - it's the absolute version of "Zero Page,X"
-  - I'm gonna switch the Memory Viewer back to $4020 so you can see it
-  - run the rest of the code ⏩
-  events:
-  - step [rest1]
-
-rest1:
-  messages: []
-  events:
-  - step [rest2]
-
-rest2:
-  messages:
-  - this has written $CD to $4052 😋
-  - ($4050 + the content of [X])
-  responses:
-  - pretty cool! can I use [Y] instead of [X]? [yvariants]
-
-yvariants:
-  messages:
-  - yes, there're equivalents to these modes that use [Y]
-  - not all instructions support them though 👎
-  - they're called "Zero Page,Y" and "Absolute,Y"
-  - do you want to do something fun?
-  responses:
-  - hmm... yeah? [exercise]
-
-exercise:
-  run-after-messages: |
-    level.fillContentFromTemp();
     set((m) => {
-      m.$end = true;
-      m.chat.stopBlock = null;
-      m.$canEdit = true;
-      m.content.useTempContent = false;
+      m.chat.winOnEnd = true;
+      m.chat.stopBlock = locales.get("not_now");
+      m.$canRun = false;
     });
-    {{Bottom}}.setDelay(0);
+    bus.emit("memory-view", 0x0);
   messages:
-  - remove all the code
-  - build a program that screams through the memory addresses 😱
-  - that means, it writes $AA exactly 64 times from $4080 to $40BF
-  - as always, when you're ready, run the `test` command
-  responses: []
+  - now, the most insane ones 😓
+  - let's start with "Indexed Indirect"
+  - it's like a cross between "Zero Page,X" and "Indirect"
+  - basically, you take the zero page address, add the value of [X] to it
+  - then use that to look up a two-byte address
+  responses:
+  - this is starting to get obscure [what]
+
+what:
+  run-after-messages: |
+    set((m) => m.$canRun = true);
+  messages:
+  - I know 😅 🔫
+  - let's try an example
+  - run the first 4 instructions ⏩
+  events:
+  - step [step1]
+
+step1:
+  messages: []
+  events:
+  - step [step2]
+
+step2:
+  messages: []
+  events:
+  - step [step3]
+
+step3:
+  messages: []
+  events:
+  - step [step4]
+
+step4:
+  run: |
+    set((m) => m.$canRun = false);
+  run-after-messages: |
+    set((m) => m.$canRun = true);
+  messages:
+  - we've set up memory for indirect addressing
+  - in the address $0003, we have an $80
+  - in the address $0004, we have a $40
+  - now I'll switch the Memory Viewer to the usual section
+  - run the other 3 instructions ⏩
+  events:
+  - step [step5]
+
+step5:
+  run: |
+    bus.emit("memory-view", 0x4020);
+  messages: []
+  events:
+  - step [step6]
+
+step6:
+  messages: []
+  events:
+  - step [step7]
+
+step7:
+  run: |
+    set((m) => m.$canRun = false);
+  messages:
+  - we loaded a $FA in [A] and a $02 in [X]
+  - "`STA ($01,X)` can be interpreted as something like `STA ($01+X)`"
+  - so if we add [X], we'd have `STA ($0003)`
+  - from here, things proceed like standard "Indirect" addressing
+  - this end up writing the value of [A] to $4080
+  responses:
+  - (*) what was that? 🤨 [whatwasthat]
+  - makes total sense 👍 [makessense]
+
+whatwasthat:
+  messages:
+  - remember the "Indirect" mode?
+  - it builds a address by reading another address and its consecutive byte
+  - in this case, it read an $80 from $0003 and a $40 from $0004
+  - it used the former as <least significant byte>
+  - and the latter as <most significant byte>
+  - so the resulting new address was $4080 ✨
+  responses:
+  - ...step7
+
+makessense:
+  run-after-messages: |
+    set((m) => m.$canRun = true);
+  messages:
+  - let's talk about "Indirect Indexed"
+  - last one, I promise 🤞
+  - instead of adding [X] to the address <before> evaluating the indirection
+  - it adds [Y] right <after> doing it
+  - run the remaining code ⏩
+  - and keep in mind there's a preloaded $BE in $4085
+  events:
+  - step [step8]
+
+step8:
+  messages: []
+  events:
+  - step [step9]
+
+step9:
+  messages:
+  - that $BE was loaded into [A] 🤯
+  - as we saw earlier, in our current setup ($0003) evaluates to $4080
+  - the instruction just added [Y] to it, so the final address was $4085
+  responses:
+  - I think I'm burnt out, can we skip the practice? 😓 [skip]
+
+skip:
+  messages:
+  - sure, you won't see this too much anyway
+  - you'll code an emulator
+  - so you need to build an <interpreter> for these things
+  - not the things themselves 😉
+  responses:
+  - gotcha... [end]
