Disabling temp content in level 007

--- a/src/data/levels/001_Assembly language/007_Addressing modes (3-3)/chat/es.yml
+++ b/src/data/levels/001_Assembly language/007_Addressing modes (3-3)/chat/es.yml
@@ -119,7 +119,7 @@ step9:
 
 skip:
   messages:
-  - seguro, no vas a ver mucho esto de todas formas
+  - claro, no vas a ver mucho esto de todas formas
   - vas a programar un emulador
   - por lo que necesitas construir un <intérprete> para estas cosas
   - no las cosas en sí mismas 😉
