--- a/src/data/levels/001_Assembly language/000_Example program/chat/en.yml
+++ b/src/data/levels/001_Assembly language/000_Example program/chat/en.yml
@@ -124,7 +124,7 @@ sta:
   messages:
   - STA means "STore Accumulator"
   - and as you can see, it writes the content of [A] to a memory location
-  - in this example, on the address $4070
+  - in this example, to the address $4070
   - so now the $4070 cell of the Memory Viewer has a $01
   - try running the remaining instructions ⏩
   events:
