--- a/src/data/levels/001_Assembly language/000_Example program/chat/en.yml
+++ b/src/data/levels/001_Assembly language/000_Example program/chat/en.yml
@@ -35,7 +35,7 @@ machinecode:
   messages:
   - correct
   - you're actually seeing the compiled code, right now
-  - look at the Memory Viewer at the bottom of the screen
+  - look at the Memory Viewer at the bottom right corner of the screen
   - the code starts from the $4020 memory address
   - if you place your mouse pointer over one of these addresses, it'll show where each instruction starts
   responses:
