--- a/src/data/levels/001_Assembly language/004_Branching/chat/en.yml
+++ b/src/data/levels/001_Assembly language/004_Branching/chat/en.yml
@@ -110,9 +110,10 @@ testing:
 
 help:
   messages:
-  - label are just... labels
-  - they are ignored unless we have to jump to any of them
-  - if you ever need to stop the program, you can put a label at the very end of the code
+  - 🦘  you want to always use `BEQ` and `BNE` after a comparison instruction (like `CPX`)
+  - "`CPX` sets the flag Z=1 if [X] equals the value, and then `BEQ`/`BNE` jump depending on whether Z is 1 or 0"
+  - 🏷️  also, remember that labels are ignored unless we have to jump to any of them
+  - 🛑  if you ever need to stop the program, you can put a label at the very end of the code
   - and use a branch instruction to jump to it
   - or more simply, just use the `BRK` instruction, which halts the execution 😉
   responses: []
