--- a/src/data/levels/001_Assembly language/002_Reading from memory/chat/en.yml
+++ b/src/data/levels/001_Assembly language/002_Reading from memory/chat/en.yml
@@ -1,7 +1,7 @@
 ---
 main:
   run: |
-    if (m.$end) $.goTo("exercise");
+    if (level.hasStoredContent) $.goTo("exercise");
     else {
       set((m) => {
         m.chat.stopBlock = locales.get("not_now");
@@ -70,22 +70,22 @@ result:
 
 iknow:
   run-after-messages: |
-    level.fillContentFromTemp();
-    set((m) => {
-      m.$end = true;
-      m.chat.stopBlock = null;
-      m.$canEdit = true;
-      m.content.useTempContent = false;
-    });
+    $.goTo("exercise");
   messages:
   - I know, I said [A] instead of [X]
   - "`ADC` only works with [A] 🤷"
   - hmm...
-  - ...exercise
-  responses:
-  - ...exercise
+  responses: []
 
 exercise:
+  run: |
+    level.fillContentFromTemp();
+    set((m) => {
+      m.chat.stopBlock = null;
+      m.$canRun = true;
+      m.$canEdit = true;
+      m.content.useTempContent = false;
+    });
   messages:
   - let's refactor the code 💡
   - make it so it uses `ADC` instead of 3 incrementing instructions
