--- a/src/data/levels/001_Assembly language/004_Branching/chat/en.yml
+++ b/src/data/levels/001_Assembly language/004_Branching/chat/en.yml
@@ -1,7 +1,7 @@
 ---
 main:
   run: |
-    if (m.$end) $.goTo("exercise");
+    if (level.hasStoredContent) $.goTo("exercise");
     else {
       set((m) => {
         m.chat.stopBlock = locales.get("not_now");
@@ -79,11 +79,11 @@ oh:
   - end [exercise]
 
 exercise:
-  run-after-messages: |
+  run: |
     level.fillContentFromTemp();
     set((m) => {
-      m.$end = true;
       m.chat.stopBlock = null;
+      m.$canRun = true;
       m.$canEdit = true;
       m.content.useTempContent = false;
     });
