Clarifying addressing modes exercise

--- a/src/data/levels/001_Assembly language/005_Addressing modes (1-3)/chat/en.yml
+++ b/src/data/levels/001_Assembly language/005_Addressing modes (1-3)/chat/en.yml
@@ -155,7 +155,9 @@ exercise:
   - there we go...
   - as an exercise, modify the code by adding an `STY $1001` instruction at the end
   - then an `INX` instruction
-  - but make the indirect `JMP` skip the `STY` 👀
+  - and lastly, change lines 11 and 13 so the indirect `JMP` goes directly into the new `INX` 👀
+  - (instead of jumping backwards, it should skip the `STY` and jump to our new last instruction)
+  - ⚠️  don't change the `JMP` itself, the idea is that the same `JMP ($4080)` jumps to another place
   - you'll need to look the address of the last `INX` inside the compiled code
   - when you finish, run the `test` command
   responses: []
